--- a/requirements.txt
+++ b/requirements.txt
@@ -28,12 +28,17 @@ cffi==1.15.1
 chardet==5.0.0
 click==8.1.3
 colorama==0.4.5
+dj-database-url==0.5.0
+Django==4.0.6
+django-heroku==0.3.1
+gunicorn==20.1.0
 idna==3.3
 lazy-object-proxy==1.7.1
 MarkupSafe==2.1.1
 numpy==1.23.1
 packaging==21.3
 pathspec==0.9.0
+psycopg2==2.9.3
 pycodestyle==2.8.0
 pycparser==2.21
 pyerfa==2.0.0.1
@@ -44,9 +49,12 @@ regex==2022.7.9
 six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
+sqlparse==0.4.2
 toml==0.10.2
 tornado==6.2
 typed-ast==1.5.4
 typing-extensions==4.3.0
+tzdata==2022.1
 webencodings==0.5.1
+whitenoise==6.2.0
 wrapt==1.12.1
