--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.3
 lazy-object-proxy==1.7.1
-MarkupSafe==2.1.1
+MarkupSafe==2.0.1
 numpy==1.23.1
 packaging==21.3
 pathspec==0.9.0
@@ -53,7 +53,7 @@ sqlparse==0.4.2
 toml==0.10.2
 tornado==6.2
 typed-ast==1.5.4
-typing-extensions==4.3.0
+typing_extensions==4.3.0
 tzdata==2022.1
 webencodings==0.5.1
 whitenoise==6.2.0
